restore db2_types and fix mkfile for c_client

--- a/c_client/makefile
+++ b/c_client/makefile
@@ -1,5 +1,6 @@
 
 
 all:
-	ln -sf ../db2_types.h
+	rm -f db2_types.h
+	ln -s ../db2_types.h
 	gcc -g -Wextra -Wall -std=c2x db2_client.c driver2.c -o ../bin/driver2.out	
