--- a/c_client/makefile
+++ b/c_client/makefile
@@ -1,6 +1,8 @@
 
 
 all:
-	rm -f db2_types.h
+	rm -f db2_types.h utilities.h db2_mempool.h
 	ln -s ../db2_types.h
-	gcc -g -Wextra -Wall -std=c2x db2_client.c driver2.c -o ../bin/driver2.out	
+	ln -s ../utilities.h
+	ln -s ../db2_mempool.h
+	gcc -g -Wextra -Wall -std=c2x ../utilities.c ../db2_mempool.c db2_client.c driver2.c -o ../bin/driver2.out	
