--- a/c_client/makefile
+++ b/c_client/makefile
@@ -2,6 +2,10 @@
 
 HOME=$(shell echo ~)
 
+
+# _POSIX_C_SOURCE is for nanoseconds time API (timespec, clock_gettime ...) used in db2_time
+# _USE_MISC is for usleep
+
 all:
 	gcc -g -Wextra -Wall -std=c2x \
 	../utilities.c ../db2_mempool.c ../db2_types.c \
@@ -12,4 +16,4 @@ all:
 	-I../ -I../db2_time \
 	-Ddb2_socket_path='"$(HOME)/.db2/db2_comm"' \
 	-D_POSIX_C_SOURCE=200809L \
-	-D__USE_MISC=1
+	-D__USE_MISC
